RED: Added failing test for ADD in calculator

--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "TDD task",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "start": "node index.js",
+  "test": "jest",
+  "coverage": "jest --coverage"
   },
   "author": "Erik Wink",
   "license": "ISC",
