--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "jest": "^29.7.0",
     "nyc": "^17.1.0",
     "sinon": "^19.0.2"
+  },
+  "jest": {
+    "reporters": [
+      "default",
+      "./Test-reports/MarkdownReporter.js"
+    ]
   }
 }
